feat: school duration component

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,13 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="stylesheet" href="%sveltekit.assets%/style/common.css" />
+
+		<!--TODO: don't import globally -->
+		<link rel="stylesheet" href="%sveltekit.assets%/style/colors.css" />
+		<link rel="stylesheet" href="%sveltekit.assets%/style/viewer.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script src="https://kit.fontawesome.com/e437a11dfb.js" crossorigin="anonymous"></script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
